--- a/chatgpt_backend/requirements.txt
+++ b/chatgpt_backend/requirements.txt
@@ -3,3 +3,5 @@ djangorestframework==3.13.1
 psycopg2-binary==2.9.3
 openai==0.27.0
 django-cors-headers==3.14.0
+python-decouple==3.8
+gunicorn==20.1.0
