Update the project

--- a/.envs/.env
+++ b/.envs/.env
@@ -1,6 +1,10 @@
+DJANGO_SUPERUSER_USERNAME=admin
+DJANGO_SUPERUSER_PASSWORD=admin
+
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=changeme
 POSTGRES_DB=postgres
-POSTGRES_HOST=chatgptpostgres
+POSTGRES_HOST=db
 POSTGRES_PORT=5432
+
 OPENAI_API_KEY=sk-xxxxxxxxxx
