--- a/.envs/.env.dev
+++ b/.envs/.env.dev
@@ -1,6 +1,10 @@
+DJANGO_SUPERUSER_USERNAME=admin
+DJANGO_SUPERUSER_PASSWORD=admin
+
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=changeme
 POSTGRES_DB=postgres
 POSTGRES_HOST=localhost
 POSTGRES_PORT=5532
+
 OPENAI_API_KEY=sk-xxxxxxxxxx
