--- a/chatgpt_frontend/Dockerfile
+++ b/chatgpt_frontend/Dockerfile
@@ -1,13 +1,17 @@
-FROM node:14
-
-WORKDIR /app
-
-COPY package*.json ./
-
+FROM node:19-alpine3.16 as build-deps
+WORKDIR /usr/src/app
+COPY package.json package-lock.json ./
 RUN npm install
+COPY . ./
+RUN npm run build
 
-COPY . .
+FROM nginx:1.23.3-alpine
 
-EXPOSE 3000
+RUN rm -rf /usr/share/nginx/html/*
 
-CMD ["npm", "start"]
+COPY --from=build-deps /usr/src/app/build /usr/share/nginx/html
+COPY nginx/default_nginx.conf /etc/nginx/conf.d/default.conf
+COPY nginx/nginx.conf /etc/nginx/nginx.conf
+
+EXPOSE 80
+CMD ["nginx", "-g", "daemon off;"]
