--- a/chatgpt_frontend/public/manifest.json
+++ b/chatgpt_frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "ChatGPT Clone",
+  "name": "ChatGPT Clone by @fatihbaltaci",
   "icons": [
     {
       "src": "favicon.ico",
